feat: products metadata

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,10 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <meta
+      name="google-site-verification"
+      content="x_juia4LJOF1UIiBgxwLr7QOMwAymPcnWPIAiAGFuZ8"
+    />
   </head>
   <body class="mat-typography">
     <app-root></app-root>
